# poco

./: CMakeLists.txt  components
AMQP/: CMakeLists.txt
AMQP/cmake/: PocoAMQPConfig.cmake
AMQP/include/Poco/AMQP/: Types.h
AMQP/include/Poco/AMQP/Frames/: BodyFrame.h  FrameBase.h  HeartbeatFrame.h  MarshalledFrame.h  MethodFrame.h
AMQP/include/Poco/AMQP/Types/: FieldTable.h  Integers.h  Strings.h  TypeTraits.h
AMQP/src/: BodyFrame.cpp  HeartbeatFrame.cpp  MarshalledFrame.cpp
AMQP/testsuite/: CMakeLists.txt
AMQP/testsuite/src/: AMQPTest.cpp  AMQPTest.h  AMQPTestSuite.cpp  AMQPTestSuite.h  BodyFrameTest.cpp  BodyFrameTest.h  Driver.cpp  HeartbeatFrameTest.cpp  HeartbeatFrameTest.h  MarshalledFrameTest.cpp  MarshalledFrameTest.h  MethodFrameTest.cpp  MethodFrameTest.h  TypesTest.cpp  TypesTest.h  WinDriver.cpp
